--- a/E_Advertisement/app/src/main/res/layout/activity_andmin_page.xml
+++ b/E_Advertisement/app/src/main/res/layout/activity_andmin_page.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.example.a37_1.e_advertisement.Admin_page">
+    tools:context="com.example.a37_1.e_advertisement.AdminPage">
     <!-- ActionBar отображается сверху -->
     <include
         android:id="@+id/include2"
