--- a/E_Advertisement/app/src/main/res/layout/view_item.xml
+++ b/E_Advertisement/app/src/main/res/layout/view_item.xml
@@ -4,39 +4,43 @@
     android:padding="10dp"
     android:orientation="vertical"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    android:background="#f1f1f1"
+    android:layout_marginBottom="2dp">
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="vertical">
+    <TextView
+        android:id="@+id/RVtitle"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="title"
+        android:textColor="#4D4D4D"
+        android:textSize="24sp" />
 
-        <TextView
-            android:id="@+id/RVtitle"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_alignParentTop="true"
-            android:text="title"
-            android:textSize="30sp" />
+    <TextView
+        android:id="@+id/RVcategory"
+        android:layout_width="170dp"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/RVtitle"
+        android:text="@string/Category"
+        android:textSize="9sp"/>
 
-        <TextView
-            android:id="@+id/RVcontent"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="content" />
+    <TextView
+        android:id="@+id/RVarea"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginRight="10dp"
+        android:layout_alignParentRight="true"
+        android:layout_below="@+id/RVtitle"
+        android:textSize="10sp"
+        android:text="area" />
 
-        <TextView
-            android:id="@+id/RVarea"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="area" />
 
-        <TextView
-            android:id="@+id/RVcategory"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="@string/Category" />
-
-    </LinearLayout>
+    <TextView
+        android:id="@+id/RVcontent"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textColor="#4D4D4D"
+        android:layout_below="@+id/RVcategory"
+        android:text="content" />
 
 </RelativeLayout>
