--- a/E_Advertisement/app/src/main/res/layout/activity_main.xml
+++ b/E_Advertisement/app/src/main/res/layout/activity_main.xml
@@ -22,11 +22,22 @@
 
 
         <!-- Основной контентный view, куда загружаются фрагменты -->
+        <!-- Основной контентный view, куда загружаются фрагменты -->
         <FrameLayout
             android:id="@+id/flContent"
             android:layout_width="match_parent"
             android:layout_height="match_parent" >
 
+            <android.support.design.widget.FloatingActionButton
+                android:id="@+id/floatingActionButton"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="bottom |right"
+                android:layout_margin="26dp"
+
+                android:clickable="true"
+                app:backgroundTint="#43b05c"
+                app:srcCompat="@drawable/plus" />
         </FrameLayout>
 
     </LinearLayout>
