--- a/E_Advertisement/app/src/main/res/layout/nav_header.xml
+++ b/E_Advertisement/app/src/main/res/layout/nav_header.xml
@@ -5,5 +5,5 @@
         android:adjustViewBounds="true"
         android:orientation="vertical"
         android:scaleType="fitCenter"
-        android:src="@drawable/fon"></ImageView>
+        android:src="@drawable/fon3"></ImageView>
 
