--- a/E_Advertisement/app/src/main/res/layout/nav_header.xml
+++ b/E_Advertisement/app/src/main/res/layout/nav_header.xml
@@ -1,10 +1,21 @@
+<android.support.constraint.ConstraintLayout xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_height="wrap_content"
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="wrap_content"
+    android:background="@color/fon">
 
     <ImageView xmlns:android="http://schemas.android.com/apk/res/android"
-        android:layout_width="wrap_content"
-        android:layout_height="match_parent"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="24dp"
         android:adjustViewBounds="true"
+        android:background="@color/fon"
+        android:contentDescription="TODO"
         android:orientation="vertical"
         android:scaleType="fitCenter"
-        android:background="@color/fon"
-        android:src="@drawable/logo_inverted"></ImageView>
-
+        android:src="@drawable/logo_inverted"
+        app:layout_constraintTop_toTopOf="parent"
+        tools:layout_editor_absoluteX="0dp"
+        tools:ignore="MissingConstraints"></ImageView>
+</android.support.constraint.ConstraintLayout>
