--- a/E_Advertisement/app/src/main/res/layout/activity_sign_in.xml
+++ b/E_Advertisement/app/src/main/res/layout/activity_sign_in.xml
@@ -3,14 +3,22 @@
     android:id="@+id/main_layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/grey_100"
+    android:background="#fff"
     android:orientation="vertical"
-    android:weightSum="4">
+    android:weightSum="8">
+
+    <android.support.v7.widget.Toolbar
+        android:id="@+id/toolbar2"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="#0277bd"
+        android:minHeight="?attr/actionBarSize"
+        android:theme="?attr/actionBarTheme" />
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_weight="3"
+        android:layout_weight="7"
         android:gravity="center_horizontal"
         android:orientation="vertical">
 
@@ -18,9 +26,10 @@
             android:id="@+id/google_icon"
             style="@style/ThemeOverlay.FirebaseIcon"
             android:layout_width="wrap_content"
-            android:layout_height="222dp"
+            android:layout_marginTop="-10dp"
+            android:layout_height="204dp"
             android:contentDescription="@string/desc_firebase_lockup"
-            android:src="@drawable/kek" />
+            android:src="@drawable/fon_final" />
 
         <TextView
             android:id="@+id/title_text"
@@ -29,6 +38,13 @@
             android:layout_marginBottom="@dimen/title_bottom_margin"
             android:text="@string/google_title_text"
             android:theme="@style/ThemeOverlay.MyTitleText" />
+        <ImageView
+            android:id="@+id/nulp"
+            style="@style/ThemeOverlay.FirebaseIcon"
+            android:layout_width="wrap_content"
+            android:layout_height="180dp"
+            android:contentDescription="@string/desc_firebase_lockup"
+            android:src="@drawable/nulp" />
 
         <TextView
             android:id="@+id/status"
