--- a/E_Advertisement/app/src/main/res/layout/nav_header.xml
+++ b/E_Advertisement/app/src/main/res/layout/nav_header.xml
@@ -2,7 +2,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_height="wrap_content"
     xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="wrap_content">
+    android:layout_width="wrap_content"
+    android:background="#0277BD">
 
     <ImageView xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_width="match_parent"
