--- a/E_Advertisement/app/src/main/res/menu/drawer_view.xml
+++ b/E_Advertisement/app/src/main/res/menu/drawer_view.xml
@@ -1,50 +1,48 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
-    <item android:id="@+id/main"
+    <item
+        android:id="@+id/main"
         android:title="@string/main"
-        android:icon="@drawable/home_icon_silhouette"></item>
+        android:icon="@drawable/home_icon_silhouette" />
 
-    <item android:id="@+id/gaz"
+    <item
+        android:id="@+id/gaz"
         android:title="@string/gaz"
-        android:icon="@drawable/flame"></item>
+        android:icon="@drawable/flame" />
 
-    <item android:id="@+id/voda"
+    <item
+        android:id="@+id/voda"
         android:title="@string/voda"
-        android:icon="@drawable/drop"></item>
+        android:icon="@drawable/drop" />
 
-    <item android:id="@+id/elektruka"
+    <item
+        android:id="@+id/elektruka"
         android:title="@string/elektruka"
-        android:icon="@drawable/flash"></item>
+        android:icon="@drawable/flash" />
+
 
     <item
-        android:id="@+id/settings"
-        android:icon="@drawable/settings_gears"
-        android:title="Settings" />
-    <item
-        android:icon="@drawable/notifications_button"
-        android:title="Notifications" />
-    <group>
-        <item android:id="@+id/logOut"
-            android:title="LogOut"
-            android:icon="@drawable/logout"></item>
-
-    </group>
-    <item android:id="@+id/perekrutia"
+        android:id="@+id/perekrutia"
         android:title="@string/perekrutia"
-        android:icon="@drawable/road_perspective"></item>
+        android:icon="@drawable/road_perspective" />
 
-    <item android:id="@+id/wtorm"
+    <item
+        android:id="@+id/wtorm"
         android:title="@string/wtorm"
-        android:icon="@drawable/attention"></item>
+        android:icon="@drawable/attention" />
     <item android:title="Налаштування">
         <menu>
             <item
                 android:id="@+id/settings"
-                android:icon="@drawable/settings_gears"
+                android:icon="@drawable/add"
                 android:title="Додати новину" />
             <!--<item-->
                 <!--android:icon="@drawable/notifications_button"-->
                 <!--android:title="Сповіщення" />-->
+            <item
+                android:id="@+id/logOut"
+                android:title="Вихід"
+                android:icon="@drawable/logout" />
         </menu>
     </item>
 </menu>
