--- a/E_Advertisement/app/src/main/res/layout/fragment_first.xml
+++ b/E_Advertisement/app/src/main/res/layout/fragment_first.xml
@@ -5,10 +5,14 @@
     android:layout_height="match_parent"
     tools:context="com.example.a37_1.e_advertisement.FirstFragment">
 
+
+
     <android.support.v7.widget.RecyclerView
         android:id="@+id/rv_news"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"/>
+        android:layout_height="match_parent">
+
+    </android.support.v7.widget.RecyclerView>
 
 
 </LinearLayout>
