--- a/E_Advertisement/app/src/main/res/layout/layout_row_view.xml
+++ b/E_Advertisement/app/src/main/res/layout/layout_row_view.xml
@@ -11,13 +11,29 @@
         android:layout_centerVertical="true"
         android:orientation="vertical">
 
-        <TextView
-            android:id="@+id/textViewName"
-            android:layout_width="200dp"
-            android:layout_height="wrap_content"
-            android:layout_margin="15dp"
-            android:textAppearance="?android:textAppearanceMedium"
-            tools:text="TextView" />
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="horizontal">
+
+            <TextView
+                android:id="@+id/description"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_margin="15dp"
+                android:layout_weight="1"
+                android:textAppearance="?android:textAppearanceMedium"
+                tools:text="TextView" />
+
+            <TextView
+                android:id="@+id/textViewName"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_margin="15dp"
+                android:layout_weight="1"
+                android:textAppearance="?android:textAppearanceMedium"
+                tools:text="TextView" />
+        </LinearLayout>
 
     </LinearLayout>
 </RelativeLayout>
